// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package com.example;

option java_outer_classname = "PetRepositoryApi";

message PetItem {
  string pet_id = 1;
  string name = 2;
  string image = 3;
}

message PetItemId {
  string pet_id = 1;
}


service PetCatalogRepository {
  rpc Add(PetItem) returns (google.protobuf.Empty);
  rpc GetDetails(PetItemId) returns (PetItem);
}